--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@antv/g2": "4.2.10",
-    "@antv/l7": "2.15.0",
-    "@antv/l7-maps": "2.15.0"
+    "@types/leaflet": "^1.9.3",
+    "leaflet": "^1.9.4",
+    "leaflet-auto-graticule": "^1.1.2",
+    "leaflet.chinatmsproviders": "^3.0.6"
   }
 }
